--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,6 @@
     ],
     "require": {
         "php": ">=7.0",
-        "composer/installers": "^1.0"
+        "composer/installers": "^1.0 || ^2.0"
     }
 }
